ok, fixed on desktop but still weird on mobile

--- a/css/cover-page.css
+++ b/css/cover-page.css
@@ -81,14 +81,3 @@ canvas {
 	margin-left: -250px;
 }
 
-@media only screen and (max-width:620px) {
-	p.title {
-		margin-left: -70px;
-	}
-	p.motive {
-		margin-left: -200px;
-	}
-	canvas {
-		margin-left: -240px;
-	}
-}
